--- a/Images Assembler/Images Assembler.csproj
+++ b/Images Assembler/Images Assembler.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="ImageProcessor" Version="2.9.1" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
 </Project>
